--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,4 @@
 ---
-import Social from './Social.astro';
 ---
 
 <style>
@@ -11,8 +10,7 @@ import Social from './Social.astro';
 </style>
 
 <footer>
-  <Social platform="twitter" username="astrodotbuild" />
-  <Social platform="github" username="withastro" />
-  <Social platform="youtube" username="astrodotbuild" />
+  <p>本博客所有文章除特别声明外，均采用<a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>协议</p>
+  <p>本博客由Astro构建</p>
 </footer>
 
