--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,5 +3,25 @@
 <div class="nav-links">
   <a href="/">博客</a>
   <a href="/tags/">标签</a>
-  <a href="/about/">关于</a>
 </div>
+
+<style>
+.nav-links {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  position: relative;
+  box-shadow: 0 2px rgba(0,2,4, 0.1);
+}
+
+.nav-links a {
+  text-decoration: none;
+  color: black;
+  padding: 1rem 1rem;
+}
+
+.nav-links a:hover {
+  color: #66ccff;
+  background-color: rgba(0, 2, 4, 0.06);
+}
+</style>
