添加关于我信息，添加页面布局，完善页脚信息

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,16 +1,20 @@
 ---
 ---
 
+<footer>
+  <p>本博客所有文章除特别声明外，均采用 <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a> 协议</p>
+  <p>本博客由Astro构建</p>
+  <p>©2025 FlyLoongZ </p>
+</footer>
+
 <style>
   footer {
-    display: flex;
-    gap: 1rem;
-    margin-top: 2rem;
+    display: block;
+    text-align: center;
+  }
+
+  footer a {
+    color: black;
   }
 </style>
-
-<footer>
-  <p>本博客所有文章除特别声明外，均采用<a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>协议</p>
-  <p>本博客由Astro构建</p>
-</footer>
 
