--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,9 +1,11 @@
 ---
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import '../styles/global.css';
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import SideBar from "../components/SideBar.astro";
+import "../styles/global.css";
 const { pageTitle } = Astro.props;
 ---
+
 <html lang="zh-CN">
   <head>
     <meta charset="utf-8" />
@@ -14,8 +16,14 @@ const { pageTitle } = Astro.props;
   </head>
   <body>
     <Header />
-    <h1>{pageTitle}</h1>
-    <slot />
+    <div id="main">
+      <div id="sidebar">
+        <SideBar />
+      </div>
+      <div id="post-page">
+        <slot><p>test</p></slot>
+      </div>
+    </div>
     <Footer />
   </body>
 </html>
