--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,23 @@
-body {
-  margin: 0;
+html {
+  background-color: #f1f5f9;
+  font-family: sans-serif;
 }
 
+body {
+  margin: 0 auto;
+}
+
+#main {
+  display: flex;
+}
+
+#sidebar {
+  position: sticky;
+  min-width: 16%;
+  margin: 2rem;
+}
+
+#post-page {
+  margin: 2rem 0;
+  padding: 0 1rem;
+}
