--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,21 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
-import BlogPost from '../components/BlogPost.astro';
-const pageTitle  = "Blog";
-const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true }));
+import BaseLayout from "../layouts/BaseLayout.astro";
+import BlogPost from "../components/BlogPost.astro";
+const pageTitle = "Blog";
+const allPosts = Object.values(
+    import.meta.glob("./posts/*.md", { eager: true }),
+);
 ---
+
 <BaseLayout pageTitle={pageTitle}>
-    {allPosts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
+    {
+        allPosts.map((post: any) => (
+            <BlogPost
+                url={post.url}
+                title={post.frontmatter.title}
+                description={post.frontmatter.description}
+                cover={post.frontmatter.cover}
+            />
+        ))
+    }
 </BaseLayout>
