--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -6,33 +6,13 @@ const pageTitle = "标签索引";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-    <div class="tags">
+    <div class="tags flex flex-wrap m-5">
         {
             tags.map((tag) => (
-                <p class="tag">
-                    <a href={`/tags/${tag}`}>{tag}</a>
+                <p class="tag p-2 m-1 rounded-lg bg-sky-400/20 hover:bg-sky-700/35">
+                    <a class="" href={`/tags/${tag}`}>{tag}</a>
                 </p>
             ))
         }
     </div>
 </BaseLayout>
-
-<style>
-  a {
-    color: #00539F;
-  }
-
-  .tags {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .tag {
-    margin: 0.25em;
-    border: dotted 1px #a1a1a1;
-    border-radius: .5em;
-    padding: .5em 1em;
-    font-size: 1.15em;
-    background-color: #F8FCFD;
-  }
-</style>
