feat: 支持没有封面图片的文章

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,12 +10,7 @@ const allPosts = Object.values(
 <BaseLayout pageTitle={pageTitle}>
     {
         allPosts.map((post: any) => (
-            <BlogPost
-                url={post.url}
-                title={post.frontmatter.title}
-                description={post.frontmatter.description}
-                cover={post.frontmatter.cover}
-            />
+            <BlogPost post={post}/>
         ))
     }
 </BaseLayout>
