--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -29,12 +29,7 @@ const { posts } = Astro.props;
     <ul>
         {
             posts.map((post: any) => (
-                <BlogPost
-                    url={post.url}
-                    title={post.frontmatter.title}
-                    description={post.frontmatter.description}
-                    cover={post.frontmatter.cover}
-                />
+                <BlogPost post={post}/>
             ))
         }
     </ul>
