--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -1,29 +1,30 @@
 ---
 import type { ImageMetadata } from "astro";
 import { Image } from "astro:assets";
-interface Props {
-    title: string;
-    url: string;
-    description: string;
-    cover: string;
-}
-const { title, url, description, cover} = Astro.props;
-const images = import.meta.glob<{default: ImageMetadata}>('/src/pages/posts/images/*.*')
+const { post } = Astro.props;
+const images = import.meta.glob<{default: ImageMetadata}>('/src/pages/posts/images/*.*');
 ---
-    
-<div class="blog-post flex flex-col my-5 bg-white rounded-xl"> 
-    <Image class="rounded-t-xl h-50 object-cover m-auto" src={images[cover]()} alt="blog post image"/>
-    <h1 class="text-xl font-bold p-3 m-1">{title}</h1>
-    <p class="p-3 m-2">{description}</p>
-    <a href={url}></a>
-</div>
-
-<script>
-    const blogpost = document.querySelectorAll('div.blog-post');
-    blogpost.forEach((blogpost) => {
-        const url = blogpost.querySelector('a')?.getAttribute('href') || "./";
-        blogpost.addEventListener('click', () => {
-            window.location.href = url;
-        })
-    })
-</script>
+   
+<a href={post.url}>
+    <article class="blog-post flex flex-col my-5 bg-white rounded-xl w-2xl max-2xl:w-auto">
+        {post.frontmatter.cover && (
+            <div class="border-b border-gray-200">
+                <Image 
+                    class="rounded-t-xl h-50 object-contain m-auto" 
+                    src={images[post.frontmatter.cover]()} 
+                    alt="blog post image"
+                />
+            </div>
+        )}
+        <h1 class="text-xl font-bold p-3">{post.frontmatter.title}</h1>
+        <p class="px-3">{post.frontmatter.description}</p>
+        <div class="flex flex-row p-3 text-xs text-gray-500">
+            <p class="flex-1">发布于{post.frontmatter.pubDate.toString().slice(0,10)}</p>
+            {
+                post.frontmatter.tags.map((tag) => (
+                    <p class="flex-none mx-1">{tag}</p>
+                ))
+            }
+        </div>
+    </article>
+</a>
