--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,20 +1,10 @@
 ---
 ---
 
-<footer>
-  <p>本博客所有文章除特别声明外，均采用 <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a> 协议</p>
-  <p>本博客由Astro构建</p>
-  <p>©2025 FlyLoongZ </p>
+<footer class="flex flex-col items-center p-6 border-t border-gray-300">
+  <p>使用 <a class="hover:text-sky-400" href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a> 协议</p>
+  <p>由 <a class="hover:text-sky-400" href="https://astro.build">Astro</a> 构建</p>
+  <p>©2025 <a class="hover:text-sky-400" href="/">FlyLoongZ</a></p>
+  <a href="https://github.com/FlyLoongZ"><svg viewBox="0 0 20 20" class="size-5 fill-black/40 dark:fill-gray-400"><path d="M10 0C4.475 0 0 4.475 0 10a9.994 9.994 0 006.838 9.488c.5.087.687-.213.687-.476 0-.237-.013-1.024-.013-1.862-2.512.463-3.162-.612-3.362-1.175-.113-.287-.6-1.175-1.025-1.412-.35-.188-.85-.65-.013-.663.788-.013 1.35.725 1.538 1.025.9 1.512 2.337 1.087 2.912.825.088-.65.35-1.088.638-1.338-2.225-.25-4.55-1.112-4.55-4.937 0-1.088.387-1.987 1.025-2.688-.1-.25-.45-1.274.1-2.65 0 0 .837-.262 2.75 1.026a9.28 9.28 0 012.5-.338c.85 0 1.7.112 2.5.337 1.912-1.3 2.75-1.024 2.75-1.024.55 1.375.2 2.4.1 2.65.637.7 1.025 1.587 1.025 2.687 0 3.838-2.337 4.688-4.562 4.938.362.312.675.912.675 1.85 0 1.337-.013 2.412-.013 2.75 0 .262.188.574.688.474A10.016 10.016 0 0020 10c0-5.525-4.475-10-10-10z"></path></svg></a>
 </footer>
-
-<style>
-  footer {
-    display: block;
-    text-align: center;
-  }
-
-  footer a {
-    color: black;
-  }
-</style>
 
