--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,30 +1,7 @@
 ---
-
 ---
 
 <div class="nav-links">
-  <a href="/">博客</a>
-  <a href="/tags/">标签</a>
+  <a class="hover:text-sky-400 px-3" href="/">博客</a>
+  <a class="hover:text-sky-400 px-3" href="/tags/">标签</a>
 </div>
-
-<style>
-  .nav-links {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    position: relative;
-    background-color: white;
-    box-shadow: 0 2px rgba(0, 2, 4, 0.1);
-  }
-
-  .nav-links a {
-    text-decoration: none;
-    color: black;
-    padding: 1rem 1rem;
-  }
-
-  .nav-links a:hover {
-    color: #66ccff;
-    background-color: rgba(0, 2, 4, 0.06);
-  }
-</style>
