--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -6,6 +6,7 @@ const pageTitle = "标签索引";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
+    <h1 class="text-xl font-semibold">所有的标签</h1>
     <div class="tags flex flex-wrap m-5">
         {
             tags.map((tag) => (
