--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,17 @@
 ---
 import Navigation from "./Navigation.astro";
+import { Image } from "astro:assets";
+import avatarImg from "../images/avatar.jpg";
 ---
 
-<header>
-    <nav>
-        <Navigation />
-    </nav>
+<header class="fixed flex inset-x-0 top-0 bg-white justify-center items-center border-b border-gray-200 shadow-md">
+    <div class="flex flex-row w-2xl items-center">
+        <a class="flex flex-row items-center gap-3 ml-4 p-2 flex-1" href="/">
+            <Image class="w-8 h-8 rounded-full" src={avatarImg} alt="图片" />
+            <p class="text-lg hover:text-sky-400">FlyLoongZ's Blog</p>
+        </a>
+        <nav class="mr-4 flex-none">
+            <Navigation />
+        </nav>
+    </div>
 </header>
